# stocks-notifier

./: .env.example  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: cron.yml  rust.yml
src/: main.rs  report.rs
