[package]
name = "stocks-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
teloxide = { version = "0.15.0", features = ["ctrlc_handler", "rustls"], default-features = false }
tokio = { version = "1.45.0", features = ["rt", "time", "macros", "sync"] }
yahoo_finance_api = "4.0.0"
